Se agrega maquetación completa

--- a/index.html
+++ b/index.html
@@ -1,8 +1,247 @@
 <html>
 <head>
-	<title></title>
+	<link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+	<link href='https://fonts.googleapis.com/css?family=Product+Sans:400,400i,700,700i' rel='stylesheet' type='text/css'>
+	<title>Design Google</title>
 </head>
 <body>
+	<header>
+		<div class="container">
+			<div class="row logo col-12">
+				<img class="logo"src="images/logo-tall.svg">
+			</div>
+			<div class="row">
+				<nav class="navv col-12">
+					<a href="">LIBRARY</a>
+					<a href="">NEWS</a>
+					<a href="">RESOURCES</a>
+					<a href="">RESOURCES</a>
+					<a href="">JOBS</a>
+					<a href="">ABOUT</a>			
+				</nav>
+			</div>	
+		</div>
+	</header>
+		
+	<div class="container">
+		<div class="row">
+			<img class="images" src="images/Method_Podcast_E1_Jay_Wong_.max-4000x2000.jpegquality-90.png">
+		</div>
+		<div class="row col-8">
+			<h1>Method Podcast, Episode 1</h1>
+			<h2> Prototyping, tools, and designers who code: A conversation with Jay Wong of Project Fi</h2>
+			
+			<p>Hosted by <a href="">Interaction Designer</a> Aidan Simpson, the Method podcast profiles designers at Google, giving listeners an inside look at their journeys and design choices. In the first episode, Aidan interviews UX Design Lead Jay Wong about her experience working as a designer with a computer science degree, some of the design decisions and challenges her team tackles on <a href="">Project Fi</a>, and much, much more.</p>
+			<p>Profile</p>
+		</div>
+		<div class="col-12">
+			<hr>
+		</div>
+	</div>
 
+		<div class="container">
+			<div class="row">
+		      <div class="col-6">
+		        <p>Newsfeed</p>
+		       	<p>06/13/2017</p>
+		        <h2>A new and improved Google Design</h2>
+		       	<img class="images" src="images/GoogleDesign_new_YZwLdXV.jpg" alt="googleNewDesign">
+		        <p> We've got a fresh, new look! Now it's easier than ever to find the articles, news, and tools you love right from the homepage. Take a few minutes to explore our new story collections for in-depth insights on everything from branding to SPAN, and visit our new and improved jobs page to find out what it's really like to work with us. We've got a few more surprises in store, so sign up for our newsletter...</p>
+		      </div> 
+
+	       	 <div class="col-6 inline">
+	        	<a href="" class="news-der">More news</a>
+	          	<p><br>06/15/2017</p>
+	         	<h2>Join the Material Gallery Early Adopter Program</h2>
+	          	<p>Like staying ahead of the curve when it comes to design tools? Meet Gallery, a design collaboration app that makes it easy to find, present, and discuss work from a shared, central place. Brought to you by the Material Design...</p>
+	          	<p>06/08/2017</p>
+	          	<h2>Google Design Medium Round-Up</h2>
+	         	<p>Check out a handful of our latest and greatest Medium articles: Learn how Google redesigned over 2,000 emoji to make them more expressive than ever; Watch the topn design talks from I/O 2017 in our Definitive Design...</p>
+	         	<p>05/10/2017</p>
+	          	<h2>Material Components for Android, iOS, and the We</h2>
+	          	<p>Making Material just got easier. The new Material Components site features a library of components and expanded documentation that let you build easily for Android, iOS, and the web using open-source code. The...</p>
+	        
+	            <p>Want to stay up-to date with Google Design?</p>
+	            <a href="">Sign up for our Newsletter</a>
+	            <img class="col-2" src="images/gdlogo.png" alt="gdLogo">
+	          </div>
+    	</div> <!--row-->
+    	<hr>
+	</div> <!--Container-->
+
+	<div class="container">
+		<div class="row">
+			<div class="col-6">
+				<img class="images" src="images/connectivity_culture_and_cre.max-1200x800.jpegquality-90_Ds0BHpi.jpg">
+				<h2>Connectivity, Culture, and Credit</h2>
+				<p>Nine ways designers can be more empathic and effective when creating products for emerging markets</p>
+				<h5>Guide</h5>
+				<img class="images" src="images/building_better_design_cultu.max-1200x800.jpegquality-90.jpg"></img>
+				<h2>Building Better Design Culture</h2>
+				<p>A conversation with Google’s Mike Buzzard on creativity, career advancement, and criteria for success</p>
+				<h5>Editorial</h5>
+				<img class="images" src="images/daydream_3x2.max-1200x800.jpg"></img>
+				<h2>Speaking Volumes</h2>
+				<p>Best practices for designing a brand in VR</p>
+				<h5>Case study</h5>
+			</div>
+			<div class="col-6">
+				<img class="images" src="images/170612_IO_2017_Migration_IO_.max-1200x800.jpegquality-90.png"></img>
+				<h2>Seoul: Printed Matter, Politics, and Performance</h2>
+				<p>Four studios talk about the current design scene in South Korea’s capital</p>
+				<img src="images/icon-redirection.png"><h5>medium.com</h5>
+				<hr>
+				<p>We used the guidelines as an inspiration to go further, and spent a lot of time considering what they meant and how to put them into practice.</p>
+				<img class="asana" src="images/asana_mEkIk1i.jpg">
+				<h6>Sarah Chandler</h6>
+				<h6>Asana: Productivity with Personality</h6>
+			</div>
+		</div> <!--row-->
+		<hr>
+	</div> <!--Container-->
+
+	<div class="container">
+		<div class="row">
+			<div class="col-4">
+				<h1>Brand Recognition</h1>
+				<p>From VR to hardware, this collection of articles will guide and inspire you to do your best branding work</p>
+			</div>
+			<div class="col-4">
+				<img class="images" src="images/daydream_3x2.max-1200x800.jpg"></img>
+				<h2>Speaking Volumes</h2>
+				<p>Best practices for designing a brand in VR</p>
+				<h5>Case Study</h5>
+			</div>
+			<div class="col-4">
+				<img class="images" src="images/expressing_brand_in_material_3x2.max-1200x800.jpg"></img>
+				<h2>Expressing Brand in Material</h2>
+				<p>A step-by-step guide to staying on brand while going Material</p>
+				<h5>Editorial</h5>
+			</div>
+		</div> <!--row-->
+		<hr>
+	</div> <!--Container-->
+
+	<div class="container">
+		<div class="row">
+			<div class="col-6">
+				<img class="images" src="images/sticky_conversations_3x2.max-1200x800.jpegquality-90.jpg"></img>
+				<h2>Sticky Conversations</h2>
+				<p>Allo sticker sets balance the universal and unique</p>
+				<h5>Case Study</h5>
+				<img class="images" src="images/guide_to_span_la_3x2.max-1200x800.jpegquality-90.jpg"></img>
+				<h2>Guide to SPAN Tokyo</h2>
+				<p>Watch archived video from our Tokyo event and get to know each of the speakers, including Deyan Sudjic, Mariya Suzuki, and Keiichi Tanaami</p>
+				<h5>Guide</h5>
+				<hr>
+				<p>As the playful dots animate into Google’s signature G, the subtle piano sound resolves into a G chord to match.</p>
+				<img src="images/conor-o-sullivan.png" class="asana">
+				<h6>Conor O'Sullivan<br>Sound and Vision</h6>
+			</div>
+			<div class="col-6">
+				<img class="images" src"images/digital_natives_3x2_6u46x7C.max-1200x800.jpegquality-90.jpg"></img>
+				<h2>No Such Thing as Offline</h2>
+				<p>Digital natives are redesigning the way we build tech one tap at a time</p>
+				<h5>Editorial</h5>
+				<img class="images" src="images/airbnb_3x2.max-1200x800.jpegquality-90.jpg"></img>
+				<h2>Airbnb: Communicating Clarity and Charm</h2>
+				<p>How a trusted travel app plays host to a growing, global community</p>
+				<h5>Case Study</h5>
+				<img class="images" src="images/volume_two_3x2.max-1200x800.jpegquality-90.jpg"></img>
+				<h2>Volume Two</h2>
+				<p>Explore the visual, virtual, and written culture of Tokyo and Los Angeles through the work of our SPAN 2016 speakers</p>
+				<h5>Editorial</h5>
+			</div>
+		</div> <!--row-->
+		<hr>
+	</div> <!--Container-->
+
+	<div class="container">
+		<div class="row">
+			<h1>The Latest</h1>
+		</div> <!--row-->
+		<div class="row">
+			<div class="col-4">
+				<img class="images" src="images/design.google_library_scroll_share_1.jpg"></img>
+				<p>Get to know the ✨🆕✨ #GoogleDesign: Start with our 📚, it’s chock full of stories, guides & inspo to 🚀 your projects: http://design.google/library</p>
+				<img class="asana" src="images/twitter.svg"></img>
+			</div>
+			<div class="col-4">
+				<img class="images" src="images/gallery_present_2to1.png"></img>
+				<p>Like staying ahead of the curve when it comes to design tools? Meet Gallery, a design collaboration app that makes it easy to find, present, and discuss work from a shared, central place.</p>
+				<img class="asana" src="images/fb.png"></img>
+			</div>
+			<div class="col-4">
+				<img class="images" src="images/Method_Podcast_E1_Jay_Wong_.max-4000x2000.jpegquality-90.png"></img>
+				<p>👂 to the debut of our new podcast → Method! In Ep1 @Aidan_simpson interviews @jaylovespie on @projectfi & lots more: http://goo.gl/FPW7Kr</p>
+				<img class="asana" src="images/twitter.svg"></img>
+			</div>
+		</div> <!--row-->
+		<hr>
+	</div> <!--Container-->
+
+	<div class="container">
+		<div class="row">
+			<div class="col-6">
+				<img class="images" src="images/span_la_3x2.max-1200x800.jpegquality-90.jpg"></img>
+				<h2>SPAN 2016: Los Angeles</h2>
+				<p>Explore everything from Processing and robotics to production design at our Los Angeles conference</p>
+				<img class="asana" src="images/icon-redirection.png"></img>
+				<h5>design.google</h5>
+				<img class="images" src="images/material.png"></img>
+				<h2>Material Design Awards 2016</h2>
+				<p>Recognizing best-in-class designs from around the community</p>
+				<h5>Editorial</h5>
+			</div>
+			<div class="col-6">
+				<img class="images" src="images/design_is_never_done_3x2_4gN.max-1200x800.jpegquality-90.jpg"></img>
+				<h2>Design Is Never Done</h2>
+				<p>Material Design’s new suite of tools and guidelines—all in one place</p>
+				<h5>Editorial</h5>
+				<hr>
+				<p>In celebration of the SPAN LA event, we put together a handy cheat sheet of three things you might like to know about each speaker as well as video links to all the talks.</p>
+				<img class="asana" src="images/GD17_Favicon_192.png"></img>
+				<h6>Google Design<br>Guide to SPAN LA</h6>
+			</div>
+		</div> <!--row-->
+		<hr>
+	</div> <!--Container-->
+
+	<footer class="container">
+		<div class="row">
+			<div class="col-4">
+				<h5>Google Design</h5>
+				<p>Google Design is a cooperative effort led by a group of designers, writers, and developers at Google. We work across teams to publish original content, produce events, and foster creative and educational partnerships that advance design and technology.</p>
+			</div>
+			<div class="col-4">
+				<h5>Discover</h5>
+				<a class="blok"href="">The Keyword</a>
+				<a class="blok"href="">Material Design</a>
+				<a class="blok"href="">Google</a>
+			</div>
+			<div class="col-4">
+				<h5>Connect</h5>
+				<div class="inline">
+					<a class="blok" href="">Newsletter</a>
+					<a class="blok" href="">Google+</a>
+					<a class="blok" href="">Twitter</a>
+					<a class="blok" href="">YouTube</a>
+				</div>
+				<div class="inline">
+					<a class="blok"href="">Facebook</a>
+					<a class="blok"href="">Medium</a>
+					<a class="blok"href="">Dribbble</a>
+				</div>
+			</div>
+		</div> <!--row-->
+	</footer> <!--Container-->
+	<div class="container sub-footer">
+		<div class="row">
+			<div>
+				<img src="images/google-g.svg">
+				<a class="news-der" href="">Privacy & Terms</a>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
