Se agregan estilos e includes

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 	<link href="assets/css/style.css" rel="stylesheet" type="text/css" />
 	<link href='https://fonts.googleapis.com/css?family=Product+Sans:400,400i,700,700i' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<title>Design Google</title>
 </head>
 <body>
@@ -72,10 +73,12 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-6">
-				<img class="images" src="images/connectivity_culture_and_cre.max-1200x800.jpegquality-90_Ds0BHpi.jpg">
-				<h2>Connectivity, Culture, and Credit</h2>
-				<p>Nine ways designers can be more empathic and effective when creating products for emerging markets</p>
-				<h5>Guide</h5>
+				<div class="shadow">
+					<img class="images" src="images/connectivity_culture_and_cre.max-1200x800.jpegquality-90_Ds0BHpi.jpg">
+					<h2>Connectivity, Culture, and Credit</h2>
+					<p>Nine ways designers can be more empathic and effective when creating products for emerging markets</p>
+					<h5>Guide</h5>
+				</div>
 				<img class="images" src="images/building_better_design_cultu.max-1200x800.jpegquality-90.jpg"></img>
 				<h2>Building Better Design Culture</h2>
 				<p>A conversation with Google’s Mike Buzzard on creativity, career advancement, and criteria for success</p>
@@ -209,17 +212,17 @@
 
 	<footer class="container">
 		<div class="row">
-			<div class="col-4">
+			<div class="col-3">
 				<h5>Google Design</h5>
 				<p>Google Design is a cooperative effort led by a group of designers, writers, and developers at Google. We work across teams to publish original content, produce events, and foster creative and educational partnerships that advance design and technology.</p>
 			</div>
-			<div class="col-4">
+			<div class="col-2 offset-1">
 				<h5>Discover</h5>
 				<a class="blok"href="">The Keyword</a>
 				<a class="blok"href="">Material Design</a>
 				<a class="blok"href="">Google</a>
 			</div>
-			<div class="col-4">
+			<div class="col-2 offset-2">
 				<h5>Connect</h5>
 				<div class="inline">
 					<a class="blok" href="">Newsletter</a>
