Se agrega cambio

--- a/index.html
+++ b/index.html
@@ -79,20 +79,26 @@
 					<p>Nine ways designers can be more empathic and effective when creating products for emerging markets</p>
 					<h5>Guide</h5>
 				</div>
-				<img class="images" src="images/building_better_design_cultu.max-1200x800.jpegquality-90.jpg"></img>
-				<h2>Building Better Design Culture</h2>
-				<p>A conversation with Google’s Mike Buzzard on creativity, career advancement, and criteria for success</p>
-				<h5>Editorial</h5>
-				<img class="images" src="images/daydream_3x2.max-1200x800.jpg"></img>
-				<h2>Speaking Volumes</h2>
-				<p>Best practices for designing a brand in VR</p>
-				<h5>Case study</h5>
+				<div class="shadow">
+					<img class="images" src="images/building_better_design_cultu.max-1200x800.jpegquality-90.jpg"></img>
+					<h2>Building Better Design Culture</h2>
+					<p>A conversation with Google’s Mike Buzzard on creativity, career advancement, and criteria for success</p>
+					<h5>Editorial</h5>
+				</div>
+				<div class="shadow">
+					<img class="images" src="images/daydream_3x2.max-1200x800.jpg"></img>
+					<h2>Speaking Volumes</h2>
+					<p>Best practices for designing a brand in VR</p>
+					<h5>Case study</h5>
+				</div>
 			</div>
 			<div class="col-6">
-				<img class="images" src="images/170612_IO_2017_Migration_IO_.max-1200x800.jpegquality-90.png"></img>
-				<h2>Seoul: Printed Matter, Politics, and Performance</h2>
-				<p>Four studios talk about the current design scene in South Korea’s capital</p>
-				<img src="images/icon-redirection.png"><h5>medium.com</h5>
+				<div class="shadow">
+					<img class="images" src="images/170612_IO_2017_Migration_IO_.max-1200x800.jpegquality-90.png"></img>
+					<h2>Seoul: Printed Matter, Politics, and Performance</h2>
+					<p>Four studios talk about the current design scene in South Korea’s capital</p>
+					<img src="images/icon-redirection.png"><h5>medium.com</h5>
+				</div>	
 				<hr>
 				<p>We used the guidelines as an inspiration to go further, and spent a lot of time considering what they meant and how to put them into practice.</p>
 				<img class="asana" src="images/asana_mEkIk1i.jpg">
